--- a/public/upload.html
+++ b/public/upload.html
@@ -15,6 +15,8 @@
     <div class="container">
         <input type="file" id="fileInp" />
         <br /><br />
+        <progress max="100" value="0" hidden id="progress"></progress>
+        <br /><br />
         <input type="button" id="submit" onclick="createIteratorAndSend()" class="btn btn-primary" value="submit" />
         <input type="button" id="start" hidden onclick="start()" class="btn btn-success" value="start" />
         <input type="button" id="pause" hidden onclick="pause()" class="btn btn-warning" value="pause" />
